--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "page404_webguestworkers",
-  "description": "",
+  "name": "page404",
+  "description": "Страница ошибки 404 - Молдавские web-гастарбайтеры",
   "private": true,
-  "version": "1.0.0",
-  "keywords": [],
+  "version": "1.0.1",
+  "keywords": ["protey.info","молдавские","web-гастарбайтеры","404","страница","ошибка"],
   "author": {
     "name": "Sergey Zverev",
     "email": "element1493@yandex.ru"
